--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="main-text">
                     <p>if you free you can drop us :</p>
-                    <a>MyOwnLeon@gmail.com</a>
+                    <a>Leon@gmail.com</a>
                 </div>
                 <div class="social">
                     <i class="fab fa-facebook-f"></i>
